--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ $(document).mousemove(function(e) {
 
      <div class="row5">
          <div>
-            <img class="img-fluid" src="images/0616.jpg"> 
+            <img class="img-fluid" src="images/0616.JPG"> 
          </div>
 
          <div>
@@ -146,21 +146,21 @@ $(document).mousemove(function(e) {
          </div>
     
          <div>
-            <img class="img-fluid" src="images/0617.jpg"> 
+            <img class="img-fluid" src="images/0617.JPG"> 
          </div>
      </div>
 
      <div class="row6">
         <div class="container">
-               <img class="img-fluid" src="images/0621.jpg"> 
+               <img class="img-fluid" src="images/0621.JPG"> 
         </div>
    
         <div class="container">
-               <img class="img-fluid" src="images/0622.jpg"> 
+               <img class="img-fluid" src="images/0622.JPG"> 
         </div>
        
          <div class="container">
-               <img class="img-fluid" src="images/0618.jpg"> 
+               <img class="img-fluid" src="images/0618.JPG"> 
          </div>
      </div>
    
