--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<div id="follow"><img src="/Users/sumedhagupta/Desktop/AUD/SEM II/TEDM-1/github/images/1387.png" width: 20px;
+<div id="follow"><img src="1387.png" width: 20px;
     height: 10px;/>
 </div>
 
