--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ $(document).mousemove(function(e) {
 
  <style>
     body {
-      background-image: url('/Users/sumedhagupta/Desktop/AUD/SEM II/TEDM-1/github/images/folded-vintage-paper-texture_707519-15358.avif');
+      background-image: url('images/folded-vintage-paper-texture_707519-15358.avif');
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: 100% 100%;
@@ -231,7 +231,7 @@ $(document).mousemove(function(e) {
            height="1000"
            controls 
            autoplay>
-            <source src="/Users/sumedhagupta/Desktop/AUD/SEM II/TEDM-1/github/images/animation (2).mp4" type="video/mp4">
+            <source src="images/animation (2).mp4" type="video/mp4">
           </video>
         </div>
         <div></div>
